Tworzenie zapotrzebowania serwisowego ze zgłoszenia serwisowego

--- a/project/project-core/src/main/webapp/documents/service/repairOrder.xhtml
+++ b/project/project-core/src/main/webapp/documents/service/repairOrder.xhtml
@@ -28,8 +28,7 @@
                             <div class="box">
                                 <div class="box-header">
                                     <h3 class="page-header col-xs-12">
-                                        Zgłoszenie serwisowe: <h:outputText
-                                            value="#{serviceRepairOrderTemplateBean.document.symbol}"/>
+                                        Zgłoszenie serwisowe: <h:outputText value="#{serviceRepairOrderTemplateBean.document.symbol}"/>
                                         <small class="pull-right">Data: <h:outputText
                                                 value="#{serviceRepairOrderTemplateBean.document.documentDate}">
                                             <f:convertDateTime pattern="dd-MM-yyyy" timeZone="CET"/>
