--- a/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
@@ -63,7 +63,7 @@
 												<p:spacer style="height : 10px"/>
 												<cc:invoiceGoodList controller="#{externalInvoiceController}" widthValue="107%"/>
 												<p:spacer style="height : 10px"/>
-												<cc:invoiceBottom controller="#{externalInvoiceController}" />
+												<cc:invoiceBottom controller="#{externalInvoiceController}" title="Sprzedawca" />
 												<p:spacer style="height : 10px"/>
 												<cc:buttonBox controller="#{externalInvoiceController}"/>
 											</p:panel>
