--- a/project/project-core/src/main/webapp/documents/warehouse/internalIncoming.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/internalIncoming.xhtml
@@ -40,7 +40,7 @@
 											<p:panel visible="#{internalInvoiceController.visible}">
 												<cc:invoiceGoodList controller="#{internalInvoiceController}" widthValue="107%" />
 												<p:spacer style="height : 10px"/>
-												<cc:invoiceBottom controller="#{internalInvoiceController}" />
+												<cc:invoiceBottom controller="#{internalInvoiceController}"  title="Sprzedawca"/>
 												<p:spacer style="height : 10px"/>
 												<cc:buttonBox controller="#{internalInvoiceController}"/>
 											</p:panel>
